--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,6 +1,6 @@
 docs_dir: wiki
 site_name: PSForever Wiki
-#site_url: https://example.com/
+site_url: https://psforever.github.io/wiki/
 theme:
   name: material
 #use_directory_urls: false
