--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -3,6 +3,7 @@ site_name: PSForever Wiki
 site_url: https://psforever.github.io/wiki/
 repo_url: https://github.com/psforever/wiki
 repo_name: GitHub
+edit_uri: blob/main/wiki/
 theme:
   name: material
 #use_directory_urls: false
