--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/psforever/wiki#readme",
   "dependencies": {
+    "glob": "^7.2.0",
+    "markdown-link-check": "^3.10.0",
+    "markdownlint": "^0.25.1",
+    "markdownlint-cli": "^0.31.1",
     "prettier": "^2.6.0",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
