--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -6,4 +6,17 @@ repo_name: GitHub
 edit_uri: blob/main/wiki/
 theme:
   name: material
+markdown_extensions:
+  - attr_list
+  - md_in_html
+  - featherlight
+extra_javascript:
+  - https://unpkg.com/jquery@3/dist/jquery.min.js
+  - https://unpkg.com/featherlight@1/release/featherlight.min.js
+  - https://unpkg.com/captionjs@1/dist/jquery.caption.min.js
+  - res/captions.js
+extra_css:
+  - https://unpkg.com/featherlight@1/release/featherlight.min.css
+  - https://unpkg.com/captionjs@1/dist/captionjs.min.css
+  - res/captions.css
 #use_directory_urls: false
