enable indexes + instant loading, disable toc

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -6,10 +6,15 @@ repo_name: GitHub
 edit_uri: blob/main/wiki/
 theme:
   name: material
+  features:
+    - navigation.indexes
+    - navigation.instant
 markdown_extensions:
   - attr_list
   - md_in_html
   - featherlight
+  - toc:
+      toc_depth : "1-1"
 extra_javascript:
   - https://unpkg.com/jquery@3/dist/jquery.min.js
   - https://unpkg.com/featherlight@1/release/featherlight.min.js
