fix facilities headings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "markdownLinkUpdater.exclude": ["**/node_modules/**", "site"]
+  "markdownLinkUpdater.exclude": ["**/node_modules/**", "site"],
+  "markdownLinkUpdater.disableConfirmationPrompt": true
 }
