--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -16,7 +16,7 @@ theme:
 markdown_extensions:
   - attr_list
   - md_in_html
-  - featherlight
+  - figure
   - toc:
       toc_depth: "1-4"
 extra:
@@ -28,9 +28,6 @@ extra:
 extra_javascript:
   - https://unpkg.com/jquery@3/dist/jquery.min.js
   - https://unpkg.com/featherlight@1/release/featherlight.min.js
-  - https://unpkg.com/captionjs@1/dist/jquery.caption.min.js
-  - res/captions.js
 extra_css:
   - https://unpkg.com/featherlight@1/release/featherlight.min.css
-  #- https://unpkg.com/captionjs@1/dist/captionjs.min.css
-  - res/captions.css
+  - res/figure.css
