--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -13,6 +13,7 @@ theme:
   features:
     - navigation.indexes
     - navigation.instant
+    - search.suggest
 markdown_extensions:
   - attr_list
   - md_in_html
